# shadow-trainer

./: .dockerignore  .env.prod  .gitignore  3D_Video_plotting.ipynb  Dockerfile  Dockerfile.celery  FRONTEND_ARCHITECTURE.md  Makefile  Production_Deployment_guide.md  README.md  README_new.md  Video_download.ipynb  adi_streamlit_app.py  ai_instructions.md  build-optimized.sh  docker-compose.celery.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  final_app.py  main.py  package-lock.json  pose_viz.py  pyproject.toml  run_docker_container.sh  save_user_keypoints.py  serve  shadow-trainer-taskdef.json  start_all.sh  start_app.sh  stop_all.sh  test_api_lefty.py  test_app.py  test_npy_creation_app.py  test_sagemaker_endpoints.py  test_setup.sh  top_50_pitchers_ff.csv
api_backend/: .env.example  CELERY_IMPLEMENTATION_README.md  CELERY_MIGRATION_PLAN.md  Dockerfile  Dockerfile.prod  README.md  __init__.py  api_service copy.py  api_service.py  api_videos.py  celery_app.py  celery_job_manager.py  celery_worker.py  config.py  constants.py  create_motionagformer_artifact.py  docker-compose.prod.yml  docker-compose.yml  job_manager.py.legacy  job_manager_interface.py  kpts_analysis.py  nginx.conf  pydantic_models.py  pydantic_models_new.py  requirements.txt  run_api.py  sample.py  tasks.py  test_video_orient.py
api_frontend/: Dockerfile  README.md  adi_streamlit_app.py  package-lock.json  package.json  st_app_plotly.py  streamlit_app.py
api_inference/: README.md  api_main.py  api_service.py  api_service2.py  config.py  endpoints.py  example_curl.sh  run.py  (+11 more)
(+202 files in other folders)
