[project]
name = "shadow-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "easydict>=1.13",
    "filterpy>=1.4.5",
    "matplotlib>=3.7.5",
    "numba>=0.58.1",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.2",
    "scikit-image>=0.21.0",
    "scipy>=1.10.1",
    "setuptools>=75.3.2",
    "smplx>=0.1.28",
    "timm>=1.0.15",
    "torch==2.3.0",
    "torchprofile>=0.0.4",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
    "yacs>=0.1.8",
    "jupyter>=1.1.1,<2.0.0",
    "sagemaker>=2.247.1",
    "pytest>=8.3.5",
    "ultralytics>=8.3.161",
    "plotly>=6.2.0",
    "python-multipart>=0.0.20",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "flower>=2.0.1",
]
